--- a/Part_5_Advanced_Statistical_Methods_(Machine_Learning)/S34_L219/sklearn - Feature Selection through Feature Scaling (Standardization) - Part 1_with_comments.ipynb
+++ b/Part_5_Advanced_Statistical_Methods_(Machine_Learning)/S34_L219/sklearn - Feature Selection through Feature Scaling (Standardization) - Part 1_with_comments.ipynb
@@ -324,114 +324,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[-1.26338288, -1.24637147],\n",
-       "       [-1.74458431,  1.10632974],\n",
-       "       [-0.82067757,  1.10632974],\n",
-       "       [-1.54247971,  1.10632974],\n",
-       "       [-1.46548748, -0.07002087],\n",
-       "       [-1.68684014, -1.24637147],\n",
-       "       [-0.78218146, -0.07002087],\n",
-       "       [-0.78218146, -1.24637147],\n",
-       "       [-0.51270866, -0.07002087],\n",
-       "       [ 0.04548499,  1.10632974],\n",
-       "       [-1.06127829,  1.10632974],\n",
-       "       [-0.67631715, -0.07002087],\n",
-       "       [-1.06127829, -1.24637147],\n",
-       "       [-1.28263094,  1.10632974],\n",
-       "       [-0.6955652 , -0.07002087],\n",
-       "       [ 0.25721362, -0.07002087],\n",
-       "       [-0.86879772,  1.10632974],\n",
-       "       [-1.64834403, -0.07002087],\n",
-       "       [-0.03150724,  1.10632974],\n",
-       "       [-0.57045283,  1.10632974],\n",
-       "       [-0.81105355,  1.10632974],\n",
-       "       [-1.18639066,  1.10632974],\n",
-       "       [-1.75420834,  1.10632974],\n",
-       "       [-1.52323165, -1.24637147],\n",
-       "       [ 1.23886453, -1.24637147],\n",
-       "       [-0.18549169, -1.24637147],\n",
-       "       [-0.5608288 , -1.24637147],\n",
-       "       [-0.23361183,  1.10632974],\n",
-       "       [ 1.68156984, -1.24637147],\n",
-       "       [-0.4934606 , -0.07002087],\n",
-       "       [-0.73406132, -1.24637147],\n",
-       "       [ 0.85390339, -1.24637147],\n",
-       "       [-0.67631715, -1.24637147],\n",
-       "       [ 0.09360513,  1.10632974],\n",
-       "       [ 0.33420585, -0.07002087],\n",
-       "       [ 0.03586096, -0.07002087],\n",
-       "       [-0.35872421,  1.10632974],\n",
-       "       [ 1.04638396,  1.10632974],\n",
-       "       [-0.65706909,  1.10632974],\n",
-       "       [-0.13737155, -0.07002087],\n",
-       "       [ 0.18984542,  1.10632974],\n",
-       "       [ 0.04548499, -1.24637147],\n",
-       "       [ 1.1618723 ,  1.10632974],\n",
-       "       [-1.37887123, -1.24637147],\n",
-       "       [ 1.39284898, -1.24637147],\n",
-       "       [ 0.76728713, -0.07002087],\n",
-       "       [-0.20473975, -0.07002087],\n",
-       "       [ 1.06563201, -1.24637147],\n",
-       "       [ 0.11285319, -1.24637147],\n",
-       "       [ 1.28698467,  1.10632974],\n",
-       "       [-0.41646838,  1.10632974],\n",
-       "       [ 0.09360513, -1.24637147],\n",
-       "       [ 0.59405462, -0.07002087],\n",
-       "       [-2.03330517, -0.07002087],\n",
-       "       [ 0.32458182, -1.24637147],\n",
-       "       [ 0.40157405, -1.24637147],\n",
-       "       [-1.10939843, -0.07002087],\n",
-       "       [ 1.03675993, -1.24637147],\n",
-       "       [-0.61857297, -0.07002087],\n",
-       "       [ 0.44007016, -0.07002087],\n",
-       "       [ 1.14262424, -1.24637147],\n",
-       "       [-0.35872421,  1.10632974],\n",
-       "       [ 0.45931822,  1.10632974],\n",
-       "       [ 1.88367444,  1.10632974],\n",
-       "       [ 0.45931822, -1.24637147],\n",
-       "       [-0.12774752, -0.07002087],\n",
-       "       [ 0.04548499,  1.10632974],\n",
-       "       [ 0.85390339, -0.07002087],\n",
-       "       [ 0.15134931, -0.07002087],\n",
-       "       [ 0.8250313 ,  1.10632974],\n",
-       "       [ 0.84427936,  1.10632974],\n",
-       "       [-0.64744506, -1.24637147],\n",
-       "       [ 1.24848856, -1.24637147],\n",
-       "       [ 0.85390339,  1.10632974],\n",
-       "       [ 1.69119387,  1.10632974],\n",
-       "       [ 1.6334497 ,  1.10632974],\n",
-       "       [ 1.46021718, -1.24637147],\n",
-       "       [ 1.68156984, -0.07002087],\n",
-       "       [-0.02188321,  1.10632974],\n",
-       "       [ 0.87315144,  1.10632974],\n",
-       "       [-0.33947615, -1.24637147],\n",
-       "       [ 1.3639769 ,  1.10632974],\n",
-       "       [ 1.12337618, -1.24637147],\n",
-       "       [ 1.97029069, -0.07002087]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'x_scaled' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# The result is an ndarray\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m x_scaled\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x_scaled' is not defined"
+     ]
     }
    ],
    "source": [
     "# The result is an ndarray\n",
     "x_scaled"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
