--- a/Part_7_Deep_Learning/S50_L346/TensorFlow_MNIST_Part3_with_comments.ipynb
+++ b/Part_7_Deep_Learning/S50_L346/TensorFlow_MNIST_Part3_with_comments.ipynb
@@ -28,7 +28,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\anaconda\\envs\\py3-TF2.0\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -57,9 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Warning: Setting shuffle_files=True because split=TRAIN and shuffle_files=None. This behavior will be deprecated on 2019-08-06, at which point shuffle_files=False will be the default for all splits.\n"
+     ]
+    }
+   ],
    "source": [
     "# remember the comment from above\n",
     "# these datasets will be stored in C:\\Users\\*USERNAME*\\tensorflow_datasets\\...\n",
@@ -159,13 +176,20 @@
     "# because as_supervized=True, we've got a 2-tuple structure\n",
     "validation_inputs, validation_targets = next(iter(validation_data))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py3-TF2.0]",
+   "display_name": "py3-TF2.0",
    "language": "python",
-   "name": "conda-env-py3-TF2.0-py"
+   "name": "py3-tf2.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -177,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
