--- a/TensorFlow_Minimal_example_complete_with_comments.ipynb
+++ b/TensorFlow_Minimal_example_complete_with_comments.ipynb
@@ -2532,9 +2532,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:python3.7_TF2.0]",
+   "display_name": "py3-TF2.0",
    "language": "python",
-   "name": "conda-env-python3.7_TF2.0-py"
+   "name": "py3-tf2.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2546,7 +2546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
