Finish Business Case

--- a/Part_7_Deep_Learning/S51_L356/TensorFlow_Audiobooks_Preprocessing_Exercise.ipynb
+++ b/Part_7_Deep_Learning/S51_L356/TensorFlow_Audiobooks_Preprocessing_Exercise.ipynb
@@ -33,10 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -58,6 +56,90 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8.7300e+02, 2.1600e+03, 2.1600e+03, ..., 0.0000e+00, 0.0000e+00,\n",
+       "        1.0000e+00],\n",
+       "       [6.1100e+02, 1.4040e+03, 2.8080e+03, ..., 0.0000e+00, 1.8200e+02,\n",
+       "        1.0000e+00],\n",
+       "       [7.0500e+02, 3.2400e+02, 3.2400e+02, ..., 1.0000e+00, 3.3400e+02,\n",
+       "        1.0000e+00],\n",
+       "       ...,\n",
+       "       [2.8671e+04, 1.0800e+03, 1.0800e+03, ..., 0.0000e+00, 2.9000e+01,\n",
+       "        0.0000e+00],\n",
+       "       [3.1134e+04, 2.1600e+03, 2.1600e+03, ..., 0.0000e+00, 0.0000e+00,\n",
+       "        0.0000e+00],\n",
+       "       [3.2832e+04, 1.6200e+03, 1.6200e+03, ..., 0.0000e+00, 9.0000e+01,\n",
+       "        0.0000e+00]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_csv_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.160e+03, 2.160e+03, 1.013e+01, ..., 0.000e+00, 0.000e+00,\n",
+       "        0.000e+00],\n",
+       "       [1.404e+03, 2.808e+03, 6.660e+00, ..., 0.000e+00, 0.000e+00,\n",
+       "        1.820e+02],\n",
+       "       [3.240e+02, 3.240e+02, 1.013e+01, ..., 0.000e+00, 1.000e+00,\n",
+       "        3.340e+02],\n",
+       "       ...,\n",
+       "       [1.080e+03, 1.080e+03, 6.550e+00, ..., 0.000e+00, 0.000e+00,\n",
+       "        2.900e+01],\n",
+       "       [2.160e+03, 2.160e+03, 6.140e+00, ..., 0.000e+00, 0.000e+00,\n",
+       "        0.000e+00],\n",
+       "       [1.620e+03, 1.620e+03, 5.330e+00, ..., 0.000e+00, 0.000e+00,\n",
+       "        9.000e+01]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unscaled_inputs_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., ..., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "targets_all"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,10 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Count how many targets are 1 (meaning that the customer did convert)\n",
@@ -97,6 +177,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.160e+03, 2.160e+03, 1.013e+01, ..., 0.000e+00, 0.000e+00,\n",
+       "        0.000e+00],\n",
+       "       [1.404e+03, 2.808e+03, 6.660e+00, ..., 0.000e+00, 0.000e+00,\n",
+       "        1.820e+02],\n",
+       "       [3.240e+02, 3.240e+02, 1.013e+01, ..., 0.000e+00, 1.000e+00,\n",
+       "        3.340e+02],\n",
+       "       ...,\n",
+       "       [2.160e+03, 2.160e+03, 1.013e+01, ..., 2.592e+02, 0.000e+00,\n",
+       "        1.400e+01],\n",
+       "       [2.160e+03, 2.160e+03, 8.300e+00, ..., 2.592e+02, 0.000e+00,\n",
+       "        9.300e+01],\n",
+       "       [2.160e+03, 2.160e+03, 8.000e+00, ..., 2.592e+02, 0.000e+00,\n",
+       "        2.400e+01]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unscaled_inputs_equal_priors"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,10 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# That's the only place we use sklearn functionality. We will take advantage of its preprocessing capabilities\n",
@@ -127,10 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# When the data was collected it was actually arranged by date\n",
@@ -153,11 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1801.0 3579 0.5032131880413523\n",
+      "211.0 447 0.4720357941834452\n",
+      "225.0 448 0.5022321428571429\n"
+     ]
+    }
+   ],
    "source": [
     "# Count the total number of samples\n",
     "samples_count = shuffled_inputs.shape[0]\n",
@@ -206,10 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save the three datasets in *.npz.\n",
@@ -223,9 +337,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3-TF2.0",
    "language": "python",
-   "name": "python3"
+   "name": "py3-tf2.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -237,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
