--- a/TensorFlow_Audiobooks_Machine_Learning_with_comments.ipynb
+++ b/TensorFlow_Audiobooks_Machine_Learning_with_comments.ipynb
@@ -159,9 +159,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1770.0 3579 0.4945515507124895\n",
-      "230.0 447 0.5145413870246085\n",
-      "237.0 448 0.5290178571428571\n"
+      "1794.0 3579 0.501257334450964\n",
+      "224.0 447 0.5011185682326622\n",
+      "219.0 448 0.4888392857142857\n"
      ]
     }
    ],
@@ -284,41 +284,43 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "36/36 - 1s - loss: 0.5132 - accuracy: 0.8053 - val_loss: 0.3908 - val_accuracy: 0.8747 - 712ms/epoch - 20ms/step\n",
+      "36/36 - 1s - loss: 0.5783 - accuracy: 0.7396 - val_loss: 0.4519 - val_accuracy: 0.8770 - 695ms/epoch - 19ms/step\n",
       "Epoch 2/100\n",
-      "36/36 - 0s - loss: 0.3566 - accuracy: 0.8768 - val_loss: 0.3146 - val_accuracy: 0.8881 - 115ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.3948 - accuracy: 0.8634 - val_loss: 0.3339 - val_accuracy: 0.8837 - 109ms/epoch - 3ms/step\n",
       "Epoch 3/100\n",
-      "36/36 - 0s - loss: 0.3164 - accuracy: 0.8840 - val_loss: 0.2898 - val_accuracy: 0.8926 - 107ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.3427 - accuracy: 0.8723 - val_loss: 0.2918 - val_accuracy: 0.8971 - 108ms/epoch - 3ms/step\n",
       "Epoch 4/100\n",
-      "36/36 - 0s - loss: 0.2980 - accuracy: 0.8857 - val_loss: 0.2808 - val_accuracy: 0.8971 - 122ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.3177 - accuracy: 0.8785 - val_loss: 0.2707 - val_accuracy: 0.9060 - 109ms/epoch - 3ms/step\n",
       "Epoch 5/100\n",
-      "36/36 - 0s - loss: 0.2849 - accuracy: 0.8941 - val_loss: 0.2632 - val_accuracy: 0.9016 - 115ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.3010 - accuracy: 0.8854 - val_loss: 0.2650 - val_accuracy: 0.9016 - 113ms/epoch - 3ms/step\n",
       "Epoch 6/100\n",
-      "36/36 - 0s - loss: 0.2750 - accuracy: 0.8947 - val_loss: 0.2581 - val_accuracy: 0.9016 - 110ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.2865 - accuracy: 0.8891 - val_loss: 0.2560 - val_accuracy: 0.9195 - 108ms/epoch - 3ms/step\n",
       "Epoch 7/100\n",
-      "36/36 - 0s - loss: 0.2680 - accuracy: 0.8983 - val_loss: 0.2519 - val_accuracy: 0.9060 - 107ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.2767 - accuracy: 0.8921 - val_loss: 0.2477 - val_accuracy: 0.9128 - 111ms/epoch - 3ms/step\n",
       "Epoch 8/100\n",
-      "36/36 - 0s - loss: 0.2648 - accuracy: 0.8997 - val_loss: 0.2484 - val_accuracy: 0.9083 - 109ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.2693 - accuracy: 0.8963 - val_loss: 0.2457 - val_accuracy: 0.9195 - 110ms/epoch - 3ms/step\n",
       "Epoch 9/100\n",
-      "36/36 - 0s - loss: 0.2606 - accuracy: 0.9005 - val_loss: 0.2441 - val_accuracy: 0.9083 - 107ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.2646 - accuracy: 0.8975 - val_loss: 0.2416 - val_accuracy: 0.9150 - 115ms/epoch - 3ms/step\n",
       "Epoch 10/100\n",
-      "36/36 - 0s - loss: 0.2591 - accuracy: 0.9011 - val_loss: 0.2432 - val_accuracy: 0.9060 - 110ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.2577 - accuracy: 0.9019 - val_loss: 0.2391 - val_accuracy: 0.9217 - 121ms/epoch - 3ms/step\n",
       "Epoch 11/100\n",
-      "36/36 - 0s - loss: 0.2552 - accuracy: 0.9025 - val_loss: 0.2395 - val_accuracy: 0.9083 - 113ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.2563 - accuracy: 0.9016 - val_loss: 0.2388 - val_accuracy: 0.9217 - 123ms/epoch - 3ms/step\n",
       "Epoch 12/100\n",
-      "36/36 - 0s - loss: 0.2523 - accuracy: 0.9039 - val_loss: 0.2381 - val_accuracy: 0.9128 - 113ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.2519 - accuracy: 0.9036 - val_loss: 0.2366 - val_accuracy: 0.9172 - 119ms/epoch - 3ms/step\n",
       "Epoch 13/100\n",
-      "36/36 - 0s - loss: 0.2482 - accuracy: 0.9058 - val_loss: 0.2375 - val_accuracy: 0.9150 - 113ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.2490 - accuracy: 0.9044 - val_loss: 0.2411 - val_accuracy: 0.9128 - 132ms/epoch - 4ms/step\n",
       "Epoch 14/100\n",
-      "36/36 - 0s - loss: 0.2469 - accuracy: 0.9061 - val_loss: 0.2399 - val_accuracy: 0.9128 - 114ms/epoch - 3ms/step\n",
+      "36/36 - 0s - loss: 0.2474 - accuracy: 0.9044 - val_loss: 0.2273 - val_accuracy: 0.9262 - 112ms/epoch - 3ms/step\n",
       "Epoch 15/100\n",
-      "36/36 - 0s - loss: 0.2459 - accuracy: 0.9075 - val_loss: 0.2391 - val_accuracy: 0.9128 - 112ms/epoch - 3ms/step\n"
+      "36/36 - 0s - loss: 0.2444 - accuracy: 0.9050 - val_loss: 0.2279 - val_accuracy: 0.9262 - 113ms/epoch - 3ms/step\n",
+      "Epoch 16/100\n",
+      "36/36 - 0s - loss: 0.2416 - accuracy: 0.9058 - val_loss: 0.2315 - val_accuracy: 0.9306 - 115ms/epoch - 3ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x22d0fbdd270>"
+       "<keras.callbacks.History at 0x27955619570>"
       ]
      },
      "execution_count": 8,
@@ -402,7 +404,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14/14 [==============================] - 0s 2ms/step - loss: 0.2272 - accuracy: 0.9241\n"
+      "14/14 [==============================] - 0s 2ms/step - loss: 0.2664 - accuracy: 0.9107\n"
      ]
     }
    ],
@@ -420,7 +422,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Test loss: 0.23. Test accuracy: 92.41%\n"
+      "Test loss: 0.27. Test accuracy: 91.07%\n"
      ]
     }
    ],
